# better-leveledmphf

./: .gitignore  Cargo.toml  README.md
bench-results/: bits_per_key.csv  serial-auto.csv  serial-fastrange.csv  serial-keymode.csv
benchmarks/: Cargo.toml
benchmarks/cpp/: bbhash_bench.cpp  bbhash_runner.cpp
benchmarks/src/: lib.rs
examples/: bench_gamma.rs  bench_par_threshold.rs
report/: generated_paper_numbers.json  generated_paper_numbers.tex  paper.tex
scripts/: generate_paper_numbers.py  plot_paper_figures.py  plot_serial_csv.py  run_serial_bench.sh
src/: bitset.rs  hash.rs  lib.rs  mphf.rs
