[workspace]
members = [".", "benchmarks"]
resolver = "2"

[package]
name = "better-mphf"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
rayon = { version = "1.10", optional = true }

[profile.release]
debug = "line-tables-only"
