[workspace]
members = [".", "benchmarks"]
resolver = "2"

[package]
name = "better-mphf"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = []
# Pin rayon-core: rayon uses ^1.12.1 and otherwise pulls 1.13+ (needs rustc 1.80+).
parallel = ["dep:rayon", "dep:rayon-core"]

[dependencies]
rayon = { version = "=1.9.0", optional = true }
rayon-core = { version = "=1.12.1", optional = true }

[profile.release]
debug = "line-tables-only"
