[package]
name = "mphf-benchmarks"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enables Rayon construction in `better-mphf` (and is required to build `bench_compare_parallel`).
parallel = ["better-mphf/parallel"]

[dependencies]
better-mphf = { path = ".." }
boomphf = { version = "0.6", features = ["parallel"] }
rayon = "1.10"

[[bin]]
name = "bench_compare_parallel"
required-features = ["parallel"]
